# Chiral_scanner

./: .gitignore  README.md  app.py  bootstrap_payload.b64  pyproject.toml  requirements.txt  topic_research_notes.md
.github/workflows/: ai-classify.yml  bootstrap.yml  historical-backfill.yml  metadata-scan.yml  tests.yml
.streamlit/: config.toml
bootstrap/: chunk_00  chunk_01  chunk_02  chunk_03  chunk_04  chunk_05  chunk_06  chunk_07  chunk_08
data/: backfill_state.json  events.json  papers.json  review_history.json  scan_history.json  tools.json
scripts/: __init__.py  backfill_window.py  classify_ai.py  merge_ai.py  merge_scan.py  record_review_run.py  scan_arxiv.py  validate_data.py
src/chiral_scanner/: __init__.py  ai_classifier.py  arxiv_client.py  backfill.py  config.py  field_map.py  github_dispatch.py  history.py  history_v2.py  models.py  people_map.py  preliminary.py  research_geography.py  research_insights.py  research_intelligence.py  scope.py  storage.py  ui.py
tests/: test_ai_resilience.py  test_ai_validation.py  test_app_smoke.py  test_arxiv.py  test_author_connections.py  test_backfill_window.py  test_field_map.py  test_history.py  test_preliminary.py  test_research_geography.py  test_research_insights.py  test_research_intelligence.py  test_scope.py  test_storage.py  test_ui.py
